# advent_2021

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg  wip.py
src/01/: wip.py
src/02/: wip.py
src/03/: wip.py
src/04/: wip.py
src/05/: wip.py
src/06/: recursive.py  wip.py
src/07/: wip.py
src/08/: solve2.py  wip.py
src/09/: wip.py
src/10/: wip.py
src/11/: wip.py
src/12/: part1.py  part2.py  part2_refactor.py
src/13/: wip.py
src/14/: part1.py  part2.py
src/15/: dijkstra.py
src/16/: wip.py
src/17/: part1.py  part2.py
src/18/: number_class.py  test_part1.py  wip.py
src/19/: wip.py
src/20/: wip.py
src/21/: part1.py  part2.py
src/22/: part1.py  wip.py
src/24/: alu.py  alu_sym.py  alu_sym_optimize.py  attempt_2.ipynb  output.py  output_opt.py  search_spaces.py  serial_finder.ipynb
src/25/: wip.py
