[metadata]
name = advent_2021
version = 2021.12.0
description = Solutions to advent of code 2021
long_description = file: README.md
long_description_content_type=text/markdown

[options]
install_requires =
    jupyterlab
    jupyterlab-git
    jupyterlab-vim
    nodeenv
    numpy
    pandas
    pre-commit
    pytest
